add youtube player next

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "ngx-youtube-player": "^11.0.0",
+    "ngx-youtube-player-plus": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
