--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@angular/youtube-player": "^16.0.1",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "ngx-youtube-player": "^11.0.0",
     "ngx-youtube-player-plus": "^7.0.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.5.2",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
