finished with minor edits afterwards

--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.7",
     "angular-cd-timer": "^3.0.0",
+    "angularx-social-login": "^4.1.0",
     "bootstrap": "^5.2.3",
     "google-auth-library": "^8.8.0",
     "ngx-cookie-service": "^16.0.0",
+    "ngx-gapi-auth2": "^1.2.1",
     "ngx-youtube-player": "^11.0.0",
     "ngx-youtube-player-plus": "^7.0.0",
     "rxjs": "~7.8.0",
