--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@material/dialog": "^14.0.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.7",
+    "@types/crypto-js": "^4.1.1",
     "angular-cd-timer": "^3.0.0",
     "angularx-social-login": "^4.1.0",
     "bootstrap": "^5.2.3",
+    "crypto-js": "^4.1.1",
     "google-auth-library": "^8.8.0",
     "ngx-cookie-service": "^16.0.0",
     "ngx-gapi-auth2": "^1.2.1",
