--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
     "bootstrap": "^5.2.3",
     "crypto-js": "^4.1.1",
     "google-auth-library": "^8.8.0",
+    "iso-639-1": "^3.0.1",
+    "microsoft-cognitiveservices-speech-sdk": "^1.31.0",
     "ngx-cookie-service": "^16.0.0",
     "ngx-gapi-auth2": "^1.2.1",
     "ngx-youtube-player": "^11.0.0",
     "ngx-youtube-player-plus": "^7.0.0",
+    "pdfjs-dist": "^3.10.111",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.2",
     "zone.js": "~0.12.0"
@@ -45,6 +49,7 @@
     "@angular/compiler-cli": "^15.2.0",
     "@angular/localize": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/pdfmake": "^0.2.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
